[build-system]
requires = ["setuptools >= 70", 
"numpy==2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  { name="Claire O'Brien", email="claire.obrien@berkeley.edu" },
  { name="Ligo Scientific Collaboration (LSC)" }
]
description = "A Python library to analyse LIGO Event data from the LIGO Open Science Center. Made for HW 3 of Stat 159"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "tqdm",
	"numpy==2.0",
    "scipy==1.13",
    "h5py==3.12",
    "matplotlib==3.9",
    "ipykernel==6.29"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["event", "LOSC", "LIGO", "visualizations"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-claireobrien-ui"
Issues = "https://github.com/UCB-stat-159-f25/hw3-claireobrien-ui/issues"

[tool.setuptools]
packages = ["ligotools"]

[tool.setuptools.dynamic]
version = {attr = "ligotools.__version__"}