[build-system]
requires = ["setuptools >= 70",
"numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  { name="Claire O'Brien", email="claire.obrien@berkeley.edu" },
  { name="Ligo Scientific Collaboration (LSC)" }
]
description = "A Python library to analyse LIGO Event data from the LIGO Open Science Center"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "h5py>=3.12",
    "matplotlib>=3.9",
    "ipykernel>=6.29"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["tools", "toys"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/fperez/mytoy"
Issues = "https://github.com/fperez/mytoy/issues"

[tool.setuptools]
packages = ["ligotools"]

[tool.setuptools.dynamic]
version = {attr = "ligotools.__version__"}